force-app/main/default/objects/ESACHS_SolicitudProductosLead__c/ESACHS_SolicitudProductosLead__c.object-meta.xml
<CustomObject>
    <label>Solicitud Producto Lead</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitud Producto Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>