force-app/main/default/objects/ESACHS_SolicitudProductosLead__c/fields/ESACHS_Lead__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Solicitud Producto Lead</relationshipLabel>
    <relationshipName>Solicitud_Producto_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>