force-app/main/default/objects/ESACHS_SolicitudProductosLead__c/fields/ESACHS_NombreProductoServicio__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_NombreProductoServicio__c</fullName>
    <label>Nombre Producto / Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio Requerido</fullName>
            </value>
            <value>
                <fullName>Ambulancia de Emergencia Básica 4x2</fullName>
            </value>
            <value>
                <fullName>Ambulancia de Emergencia Básica 4x4</fullName>
            </value>
            <value>
                <fullName>Camioneta 4x4</fullName>
            </value>
            <value>
                <fullName>Sala de Rayos</fullName>
            </value>
            <value>
                <fullName>Paramédico</fullName>
            </value>
            <value>
                <fullName>Conductor</fullName>
            </value>
            <value>
                <fullName>Enfermera</fullName>
            </value>
            <value>
                <fullName>Médico</fullName>
            </value>
            <value>
                <fullName>Administrador de Contrato</fullName>
            </value>
            <value>
                <fullName>Prevencionista</fullName>
            </value>
            <value>
                <fullName>Sistema de Turno</fullName>
            </value>
            <value>
                <fullName>Jornada</fullName>
            </value>
            <value>
                <fullName>Horario Inicio Jornada</fullName>
            </value>
            <value>
                <fullName>Horario Término Jornada</fullName>
            </value>
            <value>
                <fullName>Infraestructura para Centro de Salud</fullName>
            </value>
            <value>
                <fullName>Alojamiento</fullName>
            </value>
            <value>
                <fullName>Alimentación</fullName>
            </value>
            <value>
                <fullName>Traslado desde/hacia Ciudad más Cercana</fullName>
            </value>
            <value>
                <fullName>Combustible para Móviles</fullName>
            </value>
            <value>
                <fullName>Programa de Seguridad Preventivos</fullName>
            </value>
            <value>
                <fullName>Programa de Calidad de Vida</fullName>
            </value>
            <value>
                <fullName>Programa de Salud (FyS)</fullName>
            </value>
            <value>
                <fullName>Programa de Inclusión</fullName>
            </value>
            <value>
                <fullName>Programa Hipobaria Intermitente Crónica</fullName>
            </value>
            <value>
                <fullName>Operativos Cardiovasculares</fullName>
            </value>
            <value>
                <fullName>Operativos Nutricional</fullName>
            </value>
            <value>
                <fullName>Masajes en Sillas</fullName>
            </value>
            <value>
                <fullName>Pausas Activas</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>