force-app/main/default/objects/ESACHS_SolicitudProductosLead__c/fields/ESACHS_ProductoServicioSolicitado__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_ProductoServicioSolicitado__c</fullName>
    <label>Producto / Servicio Solicitado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>