force-app/main/default/objects/ESACHS_SolicitudProductosLead__c/fields/ESACHS_TipoServicio__c.field-meta.xml
<CustomField>
    <fullName>ESACHS_TipoServicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro de Salud</fullName>
            </value>
            <value>
                <fullName>VSC Corto</fullName>
            </value>
            <value>
                <fullName>VSC Largo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>