force-app/main/default/objects/ESACHS_SolicitudProductosLead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ESACHS_Lead__c</columns>
    <columns>ESACHS_ProductoServicioSolicitado__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>